--- a/BlogSystem/BlogSystem.MVCSite/Views/Home/Index.cshtml
+++ b/BlogSystem/BlogSystem.MVCSite/Views/Home/Index.cshtml
@@ -1,4 +1,4 @@
-﻿
+﻿@model BlogSystem.Dto.WebSiteStatistic
 <div class="container shadow">
     <div class="row p-4 p-md-5 mb-4 rounded text-body-emphasis bg-secondary">
         <div class="col-lg-3 d-flex justify-content-center align-items-center">
@@ -7,7 +7,21 @@
                  alt="User Avatar" style="width: 150px; height: 150px; border-radius: 50%;">
         </div>
         <div class="col-lg-9">
-            <h2>Hey, I am Danny</h2>
+            <h2>
+                Welcome
+
+                @if (Session["NickName"] != null)
+                {
+                    @Session["NickName"]
+                }else if (Request.Cookies["NickName"] != null)
+                {
+                    @Request.Cookies["NickName"].Value
+                }
+                else
+                {
+                    <a><strong>home</strong></a>
+                }
+            </h2>
             <p class="lead">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique.</p>
         </div>
     </div>
@@ -28,8 +42,8 @@
                             </div>
                             <!-- Content -->
                             <div class="ms-3">
-                                <h3>134K</h3>
-                                <h6 class="mb-0">Pageviews</h6>
+                                <h3 id="comments">@Model.comments</h3>
+                                <h6 class="mb-0">Comments</h6>
                             </div>
                         </div>
                     </div>
@@ -45,7 +59,7 @@
                             </div>
                             <!-- Content -->
                             <div class="ms-3">
-                                <h3>180</h3>
+                                <h3 id="posts">@Model.posts</h3>
                                 <h6 class="mb-0">Posts</h6>
                             </div>
                         </div>
@@ -62,7 +76,7 @@
                             </div>
                             <!-- Content -->
                             <div class="ms-3">
-                                <h3>2150</h3>
+                                <h3 id="likes">@Model.likes</h3>
                                 <h6 class="mb-0">Likes</h6>
                             </div>
                         </div>
@@ -79,201 +93,44 @@
                             </div>
                             <!-- Content -->
                             <div class="ms-3">
-                                <h3>84K</h3>
-                                <h6 class="mb-0">Visitors</h6>
+                                <h3 id="registers">@Model.registers</h3>
+                                <h6 class="mb-0">Registers</h6>
                             </div>
                         </div>
                     </div>
                 </div>
+  
+                    @*//$(document).ready(function () {
+                    //    function updateVisitorCount() {
+                    //        $.ajax({
+                    //            url: "/Home/GetSiteStatistics/",
+                    //            type: "get", 
+                    //            success: function (data) {
+                    //                console.log("sadfas ")
+                    //                console.log(data.registers)
+                    //                $("#registers").text(data.registers);
+                    //                $("#likes").text(data.likes);
+                    //                $("#posts").text(data.posts);
+                    //                $("#comments").text(data.comments);
+
+                    //            },
+                    //            error: function (jqXHR, textStatus, errorThrown) {
+                    //            }
+                    //        })
+                    //    }
+                    //    updateVisitorCount();
+                    //})*@
+
+              
 
             </div>
-            <!--<div class="card">-->
-            <!-- Card header START -->
-            <!--<div class="card-header border-0 pb-0">
-                <h5 class="card-title"> Connections</h5>
-            </div>-->
-            <!-- Card header END -->
-            <!-- Card body START -->
-            <!--<div class="card-body">-->
-            <!-- Connections Item -->
-            <!--<div class="d-md-flex align-items-center mb-4">-->
-            <!-- Avatar -->
-            <!--<div class="avatar me-3 mb-3 mb-md-0">
-                <a href="#!"> <img class="avatar-img rounded-circle" src="assets/images/avatar/01.jpg" alt=""> </a>
-            </div>-->
-            <!-- Info -->
-            <!--<div class="w-100">
-                <div class="d-sm-flex align-items-start">
-                    <h6 class="mb-0"><a href="#!">Lori Ferguson </a></h6>
-                    <p class="small ms-sm-2 mb-0">Full Stack Web Developer</p>
-                </div>-->
-            <!-- Connections START -->
-            <!--<ul class="avatar-group mt-1 list-unstyled align-items-sm-center">
-                <li class="avatar avatar-xxs">
-                    <img class="avatar-img rounded-circle" src="assets/images/avatar/01.jpg" alt="avatar">
-                </li>
-                <li class="avatar avatar-xxs">
-                    <img class="avatar-img rounded-circle" src="assets/images/avatar/02.jpg" alt="avatar">
-                </li>
-                <li class="avatar avatar-xxs">
-                    <img class="avatar-img rounded-circle" src="assets/images/avatar/03.jpg" alt="avatar">
-                </li>
-                <li class="avatar avatar-xxs">
-                    <img class="avatar-img rounded-circle" src="assets/images/avatar/04.jpg" alt="avatar">
-                </li>
-                <li class="avatar avatar-xxs">
-                    <div class="avatar-img rounded-circle bg-primary"><span class="smaller text-white position-absolute top-50 start-50 translate-middle">+2</span></div>
-                </li>
-                <li class="small ms-3">
-                    Carolyn Ortiz, Frances Guerrero, and 20 other shared connections
-                </li>
-            </ul>-->
-            <!-- Connections END -->
-            <!--</div>-->
-            <!-- Button -->
-            <!--<div class="ms-md-auto d-flex">
-                    <button class="btn btn-danger-soft btn-sm mb-0 me-2"> Remove </button>
-                    <button class="btn btn-primary-soft btn-sm mb-0"> Message </button>
-                </div>
-            </div>-->
-            <!-- Connections Item -->
-            <!--<div class="d-md-flex align-items-center mb-4">-->
-            <!-- Avatar -->
-            <!--<div class="avatar me-3 mb-3 mb-md-0">
-                <a href="#!"> <img class="avatar-img rounded-circle" src="assets/images/avatar/02.jpg" alt=""> </a>
-            </div>-->
-            <!-- Info -->
-            <!--<div class="w-100">
-                <div class="d-sm-flex align-items-start">
-                    <h6 class="mb-0"><a href="#!">Carolyn Ortiz </a></h6>
-                    <p class="small ms-sm-2 mb-0">Web Developer | Freelancer</p>
-                </div>-->
-            <!-- Connections START -->
-            <!--<ul class="avatar-group mt-1 list-unstyled align-items-sm-center">
-                <li class="avatar avatar-xxs">
-                    <img class="avatar-img rounded-circle" src="assets/images/avatar/04.jpg" alt="avatar">
-                </li>
-                <li class="avatar avatar-xxs">
-                    <img class="avatar-img rounded-circle" src="assets/images/avatar/06.jpg" alt="avatar">
-                </li>
-                <li class="avatar avatar-xxs">
-                    <img class="avatar-img rounded-circle" src="assets/images/avatar/07.jpg" alt="avatar">
-                </li>
-                <li class="avatar avatar-xxs">
-                    <div class="avatar-img rounded-circle bg-primary"><span class="smaller text-white position-absolute top-50 start-50 translate-middle">+5</span></div>
-                </li>
-                <li class="small ms-3">
-                    Amanda Reed, Lori Stevens, and 10 other shared connections
-                </li>
-            </ul>-->
-            <!-- Connections END -->
-            <!--</div>-->
-            <!-- Button -->
-            <!--<div class="ms-md-auto d-flex">
-                    <button class="btn btn-danger-soft btn-sm mb-0 me-2"> Remove </button>
-                    <button class="btn btn-primary-soft btn-sm mb-0"> Message </button>
-                </div>
-            </div>-->
-            <!-- Connections Item -->
-            <!--<div class="d-md-flex align-items-center mb-4">-->
-            <!-- Avatar -->
-            <!--<div class="avatar me-3 mb-3 mb-md-0">
-                <a href="#!"> <img class="avatar-img rounded-circle" src="assets/images/avatar/03.jpg" alt=""> </a>
-            </div>-->
-            <!-- Info -->
-            <!--<div class="w-100">
-                <div class="d-sm-flex align-items-start">
-                    <h6 class="mb-0"><a href="#!">Lori Ferguson </a></h6>
-                    <p class="small ms-sm-2 mb-0">Full Stack Web Developer</p>
-                </div>-->
-            <!-- Connections START -->
-            <!--<ul class="avatar-group mt-1 list-unstyled align-items-sm-center">
-                <li class="small">
-                    Joan Wallace and Larry Lawson shared connections
-                </li>
-            </ul>-->
-            <!-- Connections END -->
-            <!--</div>-->
-            <!-- Button -->
-            <!--<div class="ms-md-auto d-flex">
-                    <button class="btn btn-danger-soft btn-sm mb-0 me-2"> Remove </button>
-                    <button class="btn btn-primary-soft btn-sm mb-0"> Message </button>
-                </div>
-            </div>-->
-            <!-- Connections Item -->
-            <!--<div class="d-md-flex align-items-center mb-4">-->
-            <!-- Avatar -->
-            <!--<div class="avatar me-3 mb-3 mb-md-0">
-                <a href="#!"> <img class="avatar-img rounded-circle" src="assets/images/avatar/04.jpg" alt=""> </a>
-            </div>-->
-            <!-- Info -->
-            <!--<div class="w-100">
-                <div class="d-sm-flex align-items-start">
-                    <h6 class="mb-0"><a href="#!">Lori Ferguson </a></h6>
-                    <p class="small ms-sm-2 mb-0">Full Stack Web Developer</p>
-                </div>-->
-            <!-- Connections START -->
-            <!--<ul class="avatar-group mt-1 list-unstyled align-items-sm-center">
-                <li class="small">
-                    Samuel Bishop, Judy Nguyen, and 115 other shared connections
-                </li>
-            </ul>-->
-            <!-- Connections END -->
-            <!--</div>-->
-            <!-- Button -->
-            <!--<div class="ms-md-auto d-flex">
-                    <button class="btn btn-danger-soft btn-sm mb-0 me-2"> Remove </button>
-                    <button class="btn btn-primary-soft btn-sm mb-0"> Message </button>
-                </div>
-            </div>-->
-            <!-- Connections Item -->
-            <!--<div class="d-md-flex align-items-center mb-4">-->
-            <!-- Avatar -->
-            <!--<div class="avatar me-3 mb-3 mb-md-0">
-                <a href="#!"> <img class="avatar-img rounded-circle" src="assets/images/avatar/05.jpg" alt=""> </a>
-            </div>-->
-            <!-- Info -->
-            <!--<div class="w-100">
-                <div class="d-sm-flex align-items-start">
-                    <h6 class="mb-0"><a href="#!">Lori Ferguson </a></h6>
-                    <p class="small ms-sm-2 mb-0">Full Stack Web Developer</p>
-                </div>-->
-            <!-- Connections START -->
-            <!--<ul class="avatar-group mt-1 list-unstyled align-items-sm-center">
-                <li class="small">
-                    Bryan Knight and Billy Vasquez shared connections
-                </li>
-            </ul>-->
-            <!-- Connections END -->
-            <!--</div>-->
-            <!-- Button -->
-            <!--<div class="ms-md-auto d-flex">
-                    <button class="btn btn-danger-soft btn-sm mb-0 me-2"> Remove </button>
-                    <button class="btn btn-primary-soft btn-sm mb-0"> Message </button>
-                </div>
-            </div>
-            <div class="d-grid">-->
-            <!-- Load more button START -->
-            <!--<a href="#!" role="button" class="btn btn-sm btn-loader btn-primary-soft" data-bs-toggle="button" aria-pressed="true">
-                <span class="load-text"> Load more connections </span>
-                <div class="load-icon">
-                    <div class="spinner-grow spinner-grow-sm" role="status">
-                        <span class="visually-hidden">Loading...</span>
-                    </div>
-                </div>
-            </a>-->
-            <!-- Load more button END -->
-            <!--</div>
 
-            </div>-->
-            <!-- Card body END -->
-            <!--</div>-->
             <div class=" mt-4 bg-success-subtle p-3" style="border-bottom:solid">
                 <h2 class="m-0"><i class="bi bi-hourglass-top me-2"></i>Today's top highlights</h2>
             </div>
 
             <div class="card my-4">
-                <div id="mostPopular" class="row g-4 ">
+                <div id="mostPopular" class="row  row-cols-1 row-cols-sm-2 row-cols-lg-3 gx-3 gx-md-4 mt-n2 mt-sm-0">
                     <script>
                         $("#mostPopular").load("/Article/GetTopFourArticle")
                     </script>
@@ -299,10 +156,6 @@
 
         <div class="col-md-4">
             <div class="position-sticky" style="top: 2rem;">
-                @*<div class="p-4 mb-3 bg-body-tertiary rounded">
-                    <h4 class="fst-italic">About</h4>
-                    <p class="mb-0">Customize this section to tell your visitors a little bit about your publication, writers, content, or something else entirely. Totally up to you.</p>
-                </div>*@
 
                 <div>
                     @{Html.RenderAction("RecentPosts", "Article");}
