--- a/BlogSystem/BlogSystem.MVCSite/Views/Shared/_Interest.cshtml
+++ b/BlogSystem/BlogSystem.MVCSite/Views/Shared/_Interest.cshtml
@@ -19,7 +19,7 @@
                                  alt="avatar" style="width: 50px; height: 50px; border-radius: 50%;">
                         </div>
                         <div class="ms-2">
-                            <h6 class="mb-0"> <a class="stretched-link" href="#"> @person.UserName </a></h6>
+                            <h6 class="mb-0"> <a class=" link-offset-0-hover link-underline link-underline-opacity-0 link-underline-opacity-75-hover" href="#"> @person.UserName </a></h6>
                             <p class="small mb-0">@person.AmountOfFuns followers</p>
                         </div>
                     </div>
