--- a/BlogSystem/BlogSystem.MVCSite/Views/Shared/_LayoutMainWithMultipleRow.cshtml
+++ b/BlogSystem/BlogSystem.MVCSite/Views/Shared/_LayoutMainWithMultipleRow.cshtml
@@ -11,12 +11,12 @@
                 @*<a class="nav-item nav-link link-body-emphasis" href="#">Portfolio</a>
                 <a class="nav-item nav-link link-body-emphasis" href="#">Skills</a>
                 <a class="nav-item nav-link link-body-emphasis" href="#">Resume</a>*@
-                <a class="nav-item nav-link link-body-emphasis" href="@Url.Action("ArticleListContainer","Article")">Articles</a>
+                <a class="nav-item nav-link link-body-emphasis " href="@Url.Action("ArticleListContainer","Article")">Articles</a>
                 @*<a class="nav-item nav-link link-body-emphasis" href="@Url.Action("ArticleList","Article")">Articles</a>*@
                 @*<a class="nav-item nav-link link-body-emphasis" href="#">Forums</a>
                 <a class="nav-item nav-link link-body-emphasis" href="#">Gallery</a>
                 <a class="nav-item nav-link link-body-emphasis" href="#">Sitemap</a>*@
-                <a class="nav-item nav-link link-body-emphasis" href="@Url.Action("Index", "Home")#bottom">Contact</a>
+                @*<a class="nav-item nav-link link-body-emphasis" href="@Url.Action("Index", "Home")#bottom">Contact</a>*@
                 <a class="nav-item nav-link link-body-emphasis aboutMeLink" href="@Url.Action("AboutMe","Home")">About me</a>
                 <a class="nav-item nav-link link-body-emphasis" href="@Url.Action("FAQ","Home")">FAQ</a>
             </nav>
@@ -25,23 +25,12 @@
 
 }
 
-        <div>
+        <div class="container-sm">
             @RenderBody()
         </div>
 
         @section footer{
-            <footer class="py-5 text-center text-body-secondary bg-body-tertiary mt-5">
-                <p>Blog template built for <a href="https://getbootstrap.com/">Bootstrap</a> by <a href="https://twitter.com/mdo"></a>.</p>
-                <p class="mb-0">
-                    <a href="#">Back to top</a>
-                </p>
-            </footer>
+            @Html.Partial("_Footer")
         }
 
 
-        @*<footer class="py-5 text-center text-body-secondary bg-body-tertiary" style="position: fixed; bottom: 0; width: 100%; background-color: var(--bs-body-tertiary);">
-                <p>Blog template built for <a href="https://getbootstrap.com/">Bootstrap</a> by <a href="https://twitter.com/mdo">mdo</a>.</p>
-                <p class="mb-0">
-                    <a href="#">Back to top</a>
-                </p>
-            </footer>*@
