--- a/BlogSystem/BlogSystem.MVCSite/Views/Shared/_LayoutMainWithMultipleRow.cshtml
+++ b/BlogSystem/BlogSystem.MVCSite/Views/Shared/_LayoutMainWithMultipleRow.cshtml
@@ -7,18 +7,18 @@
     <div class="container">
         <div class="nav-scroller py-1 mb-3 border-bottom">
             <nav class="nav nav-underline justify-content-between ">
-                <a class="nav-item nav-link link-body-emphasis " href="@Url.Action("Index","Home")">Home</a>
+                <a class="nav-item nav-link link-body-emphasis fw-semibold" href="@Url.Action("Index","Home")">Home</a>
                 @*<a class="nav-item nav-link link-body-emphasis" href="#">Portfolio</a>
                 <a class="nav-item nav-link link-body-emphasis" href="#">Skills</a>
                 <a class="nav-item nav-link link-body-emphasis" href="#">Resume</a>*@
-                <a class="nav-item nav-link link-body-emphasis " href="@Url.Action("ArticleListContainer","Article")">Articles</a>
+                <a class="nav-item nav-link link-body-emphasis fw-semibold" href="@Url.Action("ArticleListContainer","Article")">Articles</a>
                 @*<a class="nav-item nav-link link-body-emphasis" href="@Url.Action("ArticleList","Article")">Articles</a>*@
                 @*<a class="nav-item nav-link link-body-emphasis" href="#">Forums</a>
                 <a class="nav-item nav-link link-body-emphasis" href="#">Gallery</a>
                 <a class="nav-item nav-link link-body-emphasis" href="#">Sitemap</a>*@
                 @*<a class="nav-item nav-link link-body-emphasis" href="@Url.Action("Index", "Home")#bottom">Contact</a>*@
-                <a class="nav-item nav-link link-body-emphasis aboutMeLink" href="@Url.Action("AboutMe","Home")">About me</a>
-                <a class="nav-item nav-link link-body-emphasis" href="@Url.Action("FAQ","Home")">FAQ</a>
+                <a class="nav-item nav-link link-body-emphasis aboutMeLink fw-semibold" href="@Url.Action("AboutMe","Home")">About me</a>
+                <a class="nav-item nav-link link-body-emphasis fw-semibold" href="@Url.Action("FAQ","Home")">FAQ</a>
             </nav>
         </div>
     </div>
