--- a/BlogSystem/BlogSystem.MVCSite/Views/Home/AboutMe.cshtml
+++ b/BlogSystem/BlogSystem.MVCSite/Views/Home/AboutMe.cshtml
@@ -1,36 +1,37 @@
 ﻿
-<section>
-    <div class="row">
-        <div class="col-md-6">
-            <img src="~/Images/WeChat Image_20220925230038.jpg" class="img-fluid img-thumbnail rounded" />
-        </div>
 
-        <div class="col-md-6">
-            <h1><strong>Biography</strong></h1>
-            Hello,
-
-            My name is Danny, and I am a passionate software developer based in Los Angeles. With a strong foundation in ASP.NET MVC and a keen interest in full-stack development, I have honed my skills through various projects and continuous learning. I am particularly proficient in back-end development but also have experience with front-end technologies, including React.
-
-            Over the years, I have completed several notable projects, including a personal blog built using ASP.NET MVC and the Entity Framework. This project not only showcased my ability to manage databases and create dynamic web applications but also my commitment to following best practices in software development.
-
-            In addition to my technical skills, I am well-versed in agile methodologies, particularly Scrum, which I use to manage short-term software development projects effectively. My problem-solving abilities are further enhanced by my understanding of data structures, algorithms, and computational complexity, which I continuously strive to improve.
-
-            Currently, I am seeking opportunities to apply my skills in a professional setting where I can contribute to impactful projects and continue growing as a developer. I am open to relocating for the right opportunity and am eager to work in an environment that values innovation and collaboration.
-
-            Thank you for considering my application. I look forward to the possibility of discussing how my background, skills, and enthusiasms align with the needs of your team.
-
-            <button class="d-flex justify-content-end">Contact me</button>
-        </div>
+<div class="row">
+    <div class="col-md-6">
+        <img src="~/Images/WeChat Image_20220925230038.jpg" class="img-fluid img-thumbnail rounded" />
     </div>
 
-</section>
+    <div class="col-md-6">
+        <h1><strong>Biography</strong></h1>
+        Hello,
 
-<section class="pt-10 pt-md-12 mb-4" id="bottom">
-    <div class="container">
-        <div class="row justify-content-center">
-            <div>
-                @Html.Partial("Contact")
+        My name is Danny, and I am a passionate software developer based in Los Angeles. With a strong foundation in ASP.NET MVC and a keen interest in full-stack development, I have honed my skills through various projects and continuous learning. I am particularly proficient in back-end development but also have experience with front-end technologies, including React.
+
+        Over the years, I have completed several notable projects, including a personal blog built using ASP.NET MVC and the Entity Framework. This project not only showcased my ability to manage databases and create dynamic web applications but also my commitment to following best practices in software development.
+
+        In addition to my technical skills, I am well-versed in agile methodologies, particularly Scrum, which I use to manage short-term software development projects effectively. My problem-solving abilities are further enhanced by my understanding of data structures, algorithms, and computational complexity, which I continuously strive to improve.
+
+        Currently, I am seeking opportunities to apply my skills in a professional setting where I can contribute to impactful projects and continue growing as a developer. I am open to relocating for the right opportunity and am eager to work in an environment that values innovation and collaboration.
+
+        Thank you for considering my application. I look forward to the possibility of discussing how my background, skills, and enthusiasms align with the needs of your team.
+
+        <button class="d-flex justify-content-end">Contact me</button>
+    </div>
+</div>
+
+
+<div class="row">
+    <div class="col-12">
+        <section class="pt-10 pt-md-12 mb-4" id="bottom">
+            <div class="justify-content-center">
+                <div>
+                    @Html.Partial("Contact")
+                </div>
             </div>
-        </div> <!-- / .row -->
-    </div> <!-- / .container -->
-</section>
+        </section>
+    </div>
+</div>
