--- a/BlogSystem/BlogSystem.MVCSite/Views/Shared/_Layout.cshtml
+++ b/BlogSystem/BlogSystem.MVCSite/Views/Shared/_Layout.cshtml
@@ -11,64 +11,81 @@
 </head>
 <body style="background-color:#eff2f6">
     <div class="container-fluid shadow-sm">
-        <nav class="navbar navbar-expand-lg">
-            <div class="container-fluid">
-                <a class="navbar-brand fs-3 fw-bold text-primary" href="#">AzureSky</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarNav">
-                    <ul class="navbar-nav ms-auto">
-                        <li class="nav-item">
-                            <a class="nav-link active fw-bold fs-6 text-primary" aria-current="page" onclick="" href="@Url.Action("Register", "Home")">Sign Up</a>
-                        </li>
-                        @if (Session["userId"] != null || Request.Cookies["userId"] != null)
-                        {
-                            <li class="nav-item dropdown" style="cursor:pointer">
-                                <a class="nav-link active fw-bold fs-6 text-primary dropdown-toggle" aria-current="page" data-bs-toggle="dropdown" aria-expanded="false">
-                                    @if (Session["NickName"] != null)
-                                    {
-                                        @Session["NickName"]
-                                    }
+        <div class="row">
+            <div class="col-12">
+                <nav class="navbar navbar-expand-lg">
+                    <div class="container-fluid">
+                        <a class="navbar-brand fs-3 fw-bold text-primary" href="#">AzureSky</a>
+                        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                            <span class="navbar-toggler-icon"></span>
+                        </button>
+                        <div class="collapse navbar-collapse" id="navbarNav">
+                            <ul class="navbar-nav ms-auto">
+                                <li class="nav-item">
+                                    <a class="nav-link active fw-bold fs-6 text-primary" aria-current="page" onclick="" href="@Url.Action("Register", "Home")">Sign Up</a>
+                                </li>
+                                @if (Session["userId"] != null || Request.Cookies["userId"] != null)
+                                {
+                                    <li class="nav-item dropdown" style="cursor:pointer">
+                                        <a class="nav-link active fw-bold fs-6 text-primary dropdown-toggle" aria-current="page" data-bs-toggle="dropdown" aria-expanded="false">
+                                            @if (Session["NickName"] != null)
+                                            {
+                                                @Session["NickName"]
+                                            }
 
-                                    @if (Request.Cookies["NickName"] != null)
-                                    {
-                                        @Request.Cookies["NickName"].Value
-                                    }
-                                </a>
-                                <ul class="dropdown-menu dropdown-menu-end">
-                                    <li hidden><a class="dropdown-item" href="@Url.Action("UserProfile", "User", new {userId = Session["userId"] == null ? Request.Cookies["userId"].Value : Session["userId"]})" onmouseover="this.style.backgroundColor='#007bff'; this.style.color='white';" onmouseout="this.style.backgroundColor=''; this.style.color='';">View Profile</a></li>
-                                    @*<li><a class="dropdown-item" href="#" onmouseover="this.style.backgroundColor='#007bff'; this.style.color='white';" onmouseout="this.style.backgroundColor=''; this.style.color='';">Setting & Privacy</a></li>*@
-                                    <li hidden><hr class="dropdown-divider"></li>
-                                    <li><a class="dropdown-item" href="@Url.Action("ExitLogin", "Home")" onmouseover="this.style.backgroundColor='#007bff'; this.style.color='white';" onmouseout="this.style.backgroundColor=''; this.style.color='';">Logout</a></li>
-                                </ul>
-                            </li>
-                        }
-                        else
-                        {
-                            <li class="nav-item">
-                                <a class="nav-link active fw-bold fs-6 text-primary" aria-current="page" href="@Url.Action("Login", "Home")">Login</a>
-                            </li>
-                        }
+                                            @if (Request.Cookies["NickName"] != null)
+                                            {
+                                                @Request.Cookies["NickName"].Value
+                                            }
+                                        </a>
+                                        <ul class="dropdown-menu dropdown-menu-end">
+                                            <li hidden><a class="dropdown-item" href="@Url.Action("UserProfile", "User", new {userId = Session["userId"] == null ? Request.Cookies["userId"].Value : Session["userId"]})" onmouseover="this.style.backgroundColor='#007bff'; this.style.color='white';" onmouseout="this.style.backgroundColor=''; this.style.color='';">View Profile</a></li>
+                                            @*<li><a class="dropdown-item" href="#" onmouseover="this.style.backgroundColor='#007bff'; this.style.color='white';" onmouseout="this.style.backgroundColor=''; this.style.color='';">Setting & Privacy</a></li>*@
+                                            <li hidden><hr class="dropdown-divider"></li>
+                                            <li><a class="dropdown-item" href="@Url.Action("ExitLogin", "Home")" onmouseover="this.style.backgroundColor='#007bff'; this.style.color='white';" onmouseout="this.style.backgroundColor=''; this.style.color='';">Logout</a></li>
+                                        </ul>
+                                    </li>
+                                }
+                                else
+                                {
+                                    <li class="nav-item">
+                                        <a class="nav-link active fw-bold fs-6 text-primary" aria-current="page" href="@Url.Action("Login", "Home")">Login</a>
+                                    </li>
+                                }
 
-                    </ul>
-                </div>
+                            </ul>
+                        </div>
+                    </div>
+                </nav>
             </div>
-        </nav>
-    </div>
-    <div>
-        @RenderSection("navibar", false)
+        </div>
     </div>
 
-
-
-    <div>
-        @RenderBody()
+    <div class="container">
+        <div class="row">
+            <div class="col-12">
+                @RenderSection("navibar", false)
+            </div>
+        </div>
     </div>
 
 
-    <div>
-        @RenderSection("footer", false)
+    <div class="container">
+        <div class="row">
+            <div class="col-12">
+                @RenderBody()
+            </div>
+        </div>
+    </div>
+
+
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-12">
+                @RenderSection("footer", false)
+            </div>
+        </div>
+
     </div>
 
     @RenderSection("script", false)
