--- a/BlogSystem/BlogSystem.MVCSite/Views/Shared/_GetTopFourArticle.cshtml
+++ b/BlogSystem/BlogSystem.MVCSite/Views/Shared/_GetTopFourArticle.cshtml
@@ -2,19 +2,44 @@
 @model List<TopArticleDto>
 
 
+@*<div class="card bg-transparent border-0">
+    <div class="row g-3">
+        <div class="col-4 " style="width: 405px; height: 270px; overflow:hidden">
+            <img class="rounded " src="@item.ImagePath" alt="" style=" width: 100%; height: 100%;">
+        </div>
+        <div class="col-8">
+            <a href="#" class="badge bg-danger bg-opacity-10 text-danger mb-2 fw-bold">
+                @(item.CategoryNames == 0 ? "Non-technical" : "Technical")
+            </a>
+
+            <h5><a href="@Url.Action("ArticleDetail","Article", new {id = item.Id})" class="btn-link stretched-link text-reset fw-bold">@item.Title</a></h5>
+            <div style="font-size: 0.875rem; line-height: 1.5; max-height: 4.5rem; overflow: hidden; display: -webkit-box; -webkit-box-orient: vertical; -webkit-line-clamp: 2;">
+                <p class="mb-2">@Html.Raw(item.Content)</p>
+            </div>
+
+            <div class="position-absolute bottom-0 end-0 ">
+                <a href="###" class="text-secondary btn-link text-decoration-none me-3 ">by @item.NickName</a>
+                <a class="small text-secondary" href="#!"> <i class="bi bi-calendar-date pe-1"></i>@item.CreateTime</a>
+            </div>
+
+        </div>
+    </div>
+</div>*@
+
+
 @foreach (var item in Model)
 {
     <div class="col-md-6 ">
         <article class="card h-100 border-0 shadow-sm ">
-            <div class="position-relative">
+            <div class="position-relative" style="width: 265px; height: 200px; overflow:hidden">
                 <a href="@Url.Action("ArticleDetail","Article", new {Id = item.Id})" class="d-block position-absolute w-100 h-100 top-0 start-0" aria-label="Course link"></a>
                 <span class="badge bg-success position-absolute top-0 start-0 zindex-2 mt-3 ms-3">
                     @(item.CategoryName == 0 ? "Non-technical" : "Technical")
                 </span>
-                <img src="@item.picPath" class="card-img-top " alt="Image">
+                <img src="@item.picPath" class="card-img-top rounded" alt="Image" style=" width: 100%; height: 100%;">
             </div>
             <div class="card-body pb-3 ">
-                <h3 class="h5 mb-2 ">
+                <h3 class="h5 mb-2 " style="font-size: 0.875rem; line-height: 1.5; max-height: 4.5rem; overflow: hidden; display: -webkit-box; -webkit-box-orient: vertical; -webkit-line-clamp: 2;">
                     <a class="text-decoration-none " style=" --bs-link-hover-color-rgb: 29, 165, 04;" href="@Url.Action("ArticleDetail","Article", new {Id = item.Id})">@item.Title</a>
                 </h3>
                 <p class="fs-sm mb-2">By @item.NickName</p>
@@ -30,6 +55,7 @@
             </div>
         </article>
     </div>
+
 }
 
 
